# Sepia

./: .gitignore  CMakeLists.txt  README.md  justfile  portfolio-slug.ts  sepia.hpp
.github/workflows/: ci.yml
examples/: basic.cpp  large_dataset.cpp  multi_plot.cpp
include/sepia/: sepia.hpp
include/sepia/core/: memory.hpp  types.hpp
include/sepia/data/: series.hpp
include/sepia/output/: ppm_writer.hpp
include/sepia/params/: params.hpp
include/sepia/plot2d/: figure.hpp  plot_command.hpp  plot_entry.hpp
include/sepia/rendering/: canvas.hpp  text.hpp  tick_engine.hpp  transform.hpp
src/plot2d/: figure.cpp
stress/: stresstest.cpp
tests/: CMakeLists.txt  test_canvas.cpp  test_coord_transform.cpp  test_figure.cpp  test_lttb.cpp  test_memory.cpp  test_primitives.cpp  test_series.cpp  test_tick_engine.cpp
